addition of prism code previewer

--- a/pkg/base/base.templ
+++ b/pkg/base/base.templ
@@ -18,6 +18,7 @@ templ Show(props BaseProps) {
                 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
                 crossorigin="anonymous">
             </script>
+			<script src="/static/scripts/prism.js"></script>
 		</body>
 	</html>
 }
