--- a/pkg/base/head/head.templ
+++ b/pkg/base/head/head.templ
@@ -10,6 +10,7 @@ templ Show(props HeadProps) {
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>{ props.Title } </title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+		<link href="/static/themes/prism/prism.css" rel="stylesheet" />
 		{ children... }
 	</head>
 }
