--- a/pkg/base/base.templ
+++ b/pkg/base/base.templ
@@ -11,7 +11,7 @@ templ Show(props BaseProps) {
 	<!DOCTYPE html>
 	<html lang="en">
 		@props.HeadComponent
-		<body>
+		<body data-bs-theme="dark" data-bs-spy="scroll" data-bs-target="#scrollSpyNavigation" data-bs-smooth-scroll="true" tabindex="0">
 			{ children... }
 			<script 
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
