--- a/pkg/components/breadcrumb/breadcrumb.templ
+++ b/pkg/components/breadcrumb/breadcrumb.templ
@@ -2,29 +2,34 @@ package breadcrumb
 
 import (
 	"github.com/chrisbward/templstrap.io/pkg/base"
+	"github.com/chrisbward/templstrap.io/pkg/components/breadcrumb/breadcrumbitem"
 )
+
 type BreadcrumbProps struct {
 	base.ElementProps
-
+	BreadcrumbItems []breadcrumbitem.BreadcrumbItemProps
 }
 
-templ Show() {
+func (bcp BreadcrumbProps) GetBreadcrumbs() (BreadcrumbItems []breadcrumbitem.BreadcrumbItemProps) {
+
+	var breadcrumbItem breadcrumbitem.BreadcrumbItemProps
+	for iter, breadcrumbItemProps := range bcp.BreadcrumbItems {
+		breadcrumbItem = breadcrumbItemProps
+		if iter == len(bcp.BreadcrumbItems) -1 {
+			breadcrumbItem.IsActive = true
+		}
+		BreadcrumbItems = append(BreadcrumbItems, breadcrumbItem)
+	}
+
+	return
+}
+
+templ Show(props BreadcrumbProps) {
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item active" aria-current="page">Home</li>
-		</ol>
-	</nav>
-	<nav aria-label="breadcrumb">
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="#">Home</a></li>
-			<li class="breadcrumb-item active" aria-current="page">Library</li>
-		</ol>
-	</nav>
-	<nav aria-label="breadcrumb">
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="#">Home</a></li>
-			<li class="breadcrumb-item"><a href="#">Library</a></li>
-			<li class="breadcrumb-item active" aria-current="page">Data</li>
+			for _, breadcrumbItemProps := range props.GetBreadcrumbs() { 
+				@breadcrumbitem.Show(breadcrumbItemProps)
+			}
 		</ol>
 	</nav>
 }
