--- a/pkg/components/buttons/buttons.templ
+++ b/pkg/components/buttons/buttons.templ
@@ -1,10 +1,9 @@
 package buttons
 
 import (
-    "fmt"
+	"fmt"
 	"strings"
 	"github.com/chrisbward/templstrap.io/pkg/base"
-	 
 )
 
 type ButtonClassType string
@@ -28,12 +27,25 @@ type ButtonSizeType string
 const SmallButton ButtonSizeType = "sm"
 const LargeButton ButtonSizeType = "lg"
 
+type ButtonType string
+
+const SubmitButton ButtonType = "submit"
+const ResetButton ButtonType = "reset"
+
+type ButtonElementType string
+
+const AnchorButtonType ButtonElementType = "a"
+const ButtonButtonType ButtonElementType = "button"
+const InputButtonType ButtonElementType = "input"
+
 type ButtonProps struct {
 	base.ElementProps
-    IsDisabled bool
-	ButtonType ButtonClassType
-    Style ButtonStyleType
-    Size ButtonSizeType
+	IsDisabled        bool
+	ButtonType        ButtonType
+	ButtonClassType   ButtonClassType
+	Style             ButtonStyleType
+	Size              ButtonSizeType
+	ButtonElementType ButtonElementType
 }
 
 const RootClassName = "btn"
@@ -41,16 +53,16 @@ const RootClassName = "btn"
 func (bp *ButtonProps) CalculateClassNames() (classNames string) {
 
 	classValues := []string{RootClassName}
-	classValues = append(classValues, string(bp.ButtonType))
+	classValues = append(classValues, string(bp.ButtonClassType))
 
-	if len(bp.AdditionalClasses) > 0 {
+	if bp.AdditionalClasses != nil {
 		classValues = append(classValues, bp.AdditionalClasses...)
 	}
 
-    if bp.Size != "" {
-        buttonSizeClass := fmt.Sprintf("btn-%s", bp.Size)
-        classValues = append(classValues, buttonSizeClass)
-    }
+	if bp.Size != "" {
+		buttonSizeClass := fmt.Sprintf("btn-%s", bp.Size)
+		classValues = append(classValues, buttonSizeClass)
+	}
 
 	classNames = strings.Join(classValues, " ")
 
@@ -58,7 +70,14 @@ func (bp *ButtonProps) CalculateClassNames() (classNames string) {
 }
 
 templ Show(props ButtonProps) {
-	<button type="button" class={ props.CalculateClassNames() } disabled?={ props.IsDisabled }>
-		{ children... }
-	</button>
+	if props.ButtonElementType == "" || props.ButtonElementType == ButtonButtonType {
+		<button type={ string(props.ButtonType) } class={ props.CalculateClassNames() } disabled?={ props.IsDisabled }>
+			{ children... }
+		</button>
+	}
+	if props.ButtonElementType == AnchorButtonType {
+		<a class={ props.CalculateClassNames() } href="#" role="button">
+			{ children... }
+		</a>
+	}
 }
