pointer, bit will reverse

--- a/pkg/components/navbar/navbar.templ
+++ b/pkg/components/navbar/navbar.templ
@@ -25,7 +25,7 @@ type NavbarProps struct {
 	base.ElementProps
 	Brand         string
 	IsCollapsable bool
-	NavItems      []navitem.NavItemProps
+	NavItems      []*navitem.NavItemProps
   Placement     PlacementType
   Direction     DirectionType
 }
