--- a/pkg/base/head/head.templ
+++ b/pkg/base/head/head.templ
@@ -2,6 +2,7 @@ package head
 
 type HeadProps struct {
     Title string
+	IsHTMXEnabled bool 
 }
 
 templ Show(props HeadProps) {
@@ -10,8 +11,9 @@ templ Show(props HeadProps) {
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>{ props.Title } </title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
-		<link href="/static/themes/prism/prism.css" rel="stylesheet" />
-		<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+		if props.IsHTMXEnabled {
+			<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+		}
 		{ children... }
 	</head>
 }
