--- a/pkg/forms/form/form.templ
+++ b/pkg/forms/form/form.templ
@@ -59,6 +59,7 @@ templ Show(props FormProps) {
 			action={ templ.SafeURL(props.Action.Action) }
 			method={ props.Action.Method }
 			class={ props.BuildClassNames() }
+			id={ props.ElementProps.Id }
 			if props.ElementProps.HTMX.Encoding != "" {
 				hx-encoding={ props.ElementProps.HTMX.Encoding }
 			}
