--- a/pkg/components/buttons/buttons.templ
+++ b/pkg/components/buttons/buttons.templ
@@ -71,7 +71,7 @@ func (bp *ButtonProps) BuildClassNames() (classNames string) {
 
 templ Show(props ButtonProps) {
 	if props.ButtonElementType == "" || props.ButtonElementType == ButtonButtonType {
-		<button type={ string(props.ButtonType) } class={ props.BuildClassNames() } disabled?={ props.IsDisabled }>
+		<button id={ props.ElementProps.Id } type={ string(props.ButtonType) } class={ props.BuildClassNames() } disabled?={ props.IsDisabled }>
 			{ children... }
 		</button>
 	}
