name prop added to checks

--- a/pkg/forms/checks/checks.templ
+++ b/pkg/forms/checks/checks.templ
@@ -34,6 +34,7 @@ templ Show(props ChecksProps) {
 			class="form-check-input" 
 			type="checkbox" 
 			id={ props.Id } 
+			name={ props.Id }
 			checked?={ props.IsChecked }
 		/>
 		<label class="form-check-label" for="flexCheckChecked">
