default value of checkbox

--- a/pkg/forms/checks/checks.templ
+++ b/pkg/forms/checks/checks.templ
@@ -35,6 +35,7 @@ templ Show(props ChecksProps) {
 			type="checkbox" 
 			id={ props.Id } 
 			name={ props.Id }
+			value="true"
 			checked?={ props.IsChecked }
 		/>
 		<label class="form-check-label" for="flexCheckChecked">
