--- a/pkg/base/base.templ
+++ b/pkg/base/base.templ
@@ -5,6 +5,7 @@ import ()
 type BaseProps struct {
 	Title         string
 	HeadComponent templ.Component
+	BodyContentComponent templ.Component
 }
 
 templ Show(props BaseProps) {
@@ -12,6 +13,7 @@ templ Show(props BaseProps) {
 	<html lang="en">
 		@props.HeadComponent
 		<body data-bs-theme="dark" data-bs-spy="scroll" data-bs-target="#scrollSpyNavigation" data-bs-smooth-scroll="true" tabindex="0">
+			@props.BodyContentComponent
 			{ children... }
 			<script 
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
